Both simple SNN and perceptron ~0.38 acc

--- a/notebooks/super-simple-perceptron.ipynb
+++ b/notebooks/super-simple-perceptron.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
     "import torch.utils.data as data\n",
-    "import snntorch as snn\n",
     "import pandas as pd"
    ],
    "metadata": {
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "device(type='cuda')"
      },
-     "execution_count": 542,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x2318f9132f0>"
+      "text/plain": "<torch._C.Generator at 0x16eb81422f0>"
      },
-     "execution_count": 543,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,30 +79,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 18,
    "outputs": [],
    "source": [
-    "class SimpleSNNPredictor(nn.Module):\n",
-    "    def __init__(self, num_inputs, num_hidden, beta=0.95, num_steps=25):\n",
+    "class SimplePredictor(nn.Module):\n",
+    "    def __init__(self, num_inputs, num_hidden, num_outputs):\n",
     "        super().__init__()\n",
-    "        self.num_steps = num_steps\n",
-    "\n",
-    "        # Initialize layers\n",
-    "        self.fc1 = nn.Linear(num_inputs, num_hidden)\n",
-    "        self.lif1 = snn.Leaky(beta=beta)\n",
-    "        self.fc2 = nn.Linear(num_hidden, num_outputs)\n",
+    "        self.linear1 = nn.Linear(num_inputs, num_hidden)\n",
+    "        self.bn1 = nn.BatchNorm1d(num_hidden)\n",
+    "        self.fn1 = nn.LeakyReLU()\n",
+    "        #self.d1 = nn.Dropout(0.3)\n",
+    "        self.linear2 = nn.Linear(num_hidden, num_outputs)\n",
     "\n",
     "    def forward(self, x):\n",
-    "\n",
-    "        # Initialize hidden states at t=0\n",
-    "        mem1 = self.lif1.init_leaky()\n",
-    "\n",
-    "        for step in range(self.num_steps):\n",
-    "            cur1 = self.fc1(x)\n",
-    "            spk1, mem1 = self.lif1(cur1, mem1)\n",
-    "            cur2 = self.fc2(spk1)\n",
-    "\n",
-    "        return cur2"
+    "        x = self.linear1(x)\n",
+    "        x = self.bn1(x)\n",
+    "        x = self.fn1(x)\n",
+    "        #x = self.d1(x)\n",
+    "        x = self.linear2(x)\n",
+    "        return x"
    ],
    "metadata": {
     "collapsed": false,
@@ -113,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "def get_accuracy(model, loader, pct_close):\n",
@@ -125,23 +120,9 @@
     "        output = model(x)\n",
     "        pred = torch.round(output)\n",
     "        correct += (torch.abs(pred-labels.view_as(pred)) < torch.abs(pct_close * labels.view_as(pred))).sum().item()\n",
+    "        # correct += (torch.abs(pred-labels.view_as(pred)) < pct_close).sum().item()\n",
     "        total += x.shape[0]\n",
     "    return correct / total"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 546,
-   "outputs": [],
-   "source": [
-    "batch_size = 32\n",
-    "dtype = torch.float"
    ],
    "metadata": {
     "collapsed": false,
@@ -161,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "data06 = pd.read_csv(\"../data/processed/target06.csv\")"
@@ -175,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "all_data = data.TensorDataset(torch.from_numpy((data06.values[:,:-1] - data06.values[:,:-1].min(0)) / data06.values[:,:-1].ptp(0)).float(), torch.from_numpy(data06.values[:,-1]).float())  # with normalization\n",
@@ -190,12 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 22,
    "outputs": [],
    "source": [
-    "train_loader = data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
-    "test_loader = data.DataLoader(test_dataset, batch_size=batch_size, shuffle=False, drop_last=False)\n",
-    "valid_loader = data.DataLoader(valid_dataset, batch_size=batch_size, shuffle=False, drop_last=False)"
+    "data_loader = data.DataLoader(train_dataset, batch_size=32, shuffle=True, drop_last=True)\n",
+    "test_data_loader = data.DataLoader(test_dataset, batch_size=256, shuffle=False, drop_last=False)\n",
+    "valid_data_loader = data.DataLoader(valid_dataset, batch_size=256, shuffle=False, drop_last=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -215,26 +196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SimpleSNNPredictor(\n",
-      "  (fc1): Linear(in_features=8, out_features=1200, bias=True)\n",
-      "  (lif1): Leaky()\n",
-      "  (fc2): Linear(in_features=1200, out_features=1, bias=True)\n",
+      "SimplePredictor(\n",
+      "  (linear1): Linear(in_features=8, out_features=500, bias=True)\n",
+      "  (bn1): BatchNorm1d(500, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (fn1): LeakyReLU(negative_slope=0.01)\n",
+      "  (linear2): Linear(in_features=500, out_features=1, bias=True)\n",
       ")\n"
      ]
     }
    ],
    "source": [
-    "num_inputs=8\n",
-    "num_hidden=1200\n",
-    "num_outputs=1\n",
-    "\n",
-    "model = SimpleSNNPredictor(num_inputs, num_hidden, num_outputs)\n",
+    "model = SimplePredictor(num_inputs=8, num_hidden=500, num_outputs=1)\n",
     "model.to(device)\n",
     "print(model)"
    ],
@@ -247,12 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 24,
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3, betas=(0.9, 0.999))\n",
     "loss_fun = nn.MSELoss()\n",
-    "num_steps = 20"
+    "optimizer = optim.Adam(model.parameters(), lr=0.00001)\n",
+    "epochs = 300"
    ],
    "metadata": {
     "collapsed": false,
@@ -272,58 +250,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, loss: 4.53e+02, acc: 0.2254335260115607\n",
-      "Epoch: 2, loss: 2.25e+02, acc: 0.2705202312138728\n",
-      "Epoch: 4, loss: 88.3, acc: 0.3132947976878613\n",
-      "Epoch: 6, loss: 50.6, acc: 0.330635838150289\n",
-      "Epoch: 8, loss: 72.4, acc: 0.32716763005780347\n",
-      "Epoch: 10, loss: 46.4, acc: 0.3630057803468208\n",
-      "Epoch: 12, loss: 70.1, acc: 0.3375722543352601\n",
-      "Epoch: 14, loss: 84.3, acc: 0.34566473988439306\n",
-      "Epoch: 16, loss: 1.2e+02, acc: 0.3283236994219653\n",
-      "Epoch: 18, loss: 80.1, acc: 0.34335260115606936\n",
-      "Epoch: 20, loss: 83.9, acc: 0.35953757225433525\n",
-      "Epoch: 22, loss: 48.5, acc: 0.3560693641618497\n",
-      "Epoch: 24, loss: 96.1, acc: 0.34104046242774566\n",
-      "Epoch: 26, loss: 58.5, acc: 0.36647398843930634\n",
-      "Epoch: 28, loss: 39.9, acc: 0.34104046242774566\n",
-      "Epoch: 30, loss: 77.1, acc: 0.3468208092485549\n"
+      "Epoch: 0, loss: 5.23e+02, acc: 0.0\n",
+      "Epoch: 10, loss: 3.77e+02, acc: 0.028901734104046242\n",
+      "Epoch: 20, loss: 1.58e+02, acc: 0.09132947976878612\n",
+      "Epoch: 30, loss: 1.84e+02, acc: 0.19884393063583816\n",
+      "Epoch: 40, loss: 2.49e+02, acc: 0.2682080924855491\n",
+      "Epoch: 50, loss: 1.83e+02, acc: 0.2832369942196532\n",
+      "Epoch: 60, loss: 1.38e+02, acc: 0.28670520231213875\n",
+      "Epoch: 70, loss: 47.2, acc: 0.30057803468208094\n",
+      "Epoch: 80, loss: 50.5, acc: 0.3063583815028902\n",
+      "Epoch: 90, loss: 1.69e+02, acc: 0.31445086705202313\n",
+      "Epoch: 100, loss: 85.1, acc: 0.3202312138728324\n",
+      "Epoch: 110, loss: 1.38e+02, acc: 0.3179190751445087\n",
+      "Epoch: 120, loss: 1.53e+02, acc: 0.3179190751445087\n",
+      "Epoch: 130, loss: 1.74e+02, acc: 0.3225433526011561\n",
+      "Epoch: 140, loss: 45.3, acc: 0.32947976878612717\n",
+      "Epoch: 150, loss: 93.8, acc: 0.3421965317919075\n",
+      "Epoch: 160, loss: 98.5, acc: 0.3352601156069364\n",
+      "Epoch: 170, loss: 1.23e+02, acc: 0.33872832369942196\n",
+      "Epoch: 180, loss: 67.9, acc: 0.3421965317919075\n",
+      "Epoch: 190, loss: 58.1, acc: 0.3398843930635838\n",
+      "Epoch: 200, loss: 73.5, acc: 0.33872832369942196\n",
+      "Epoch: 210, loss: 94.0, acc: 0.3491329479768786\n",
+      "Epoch: 220, loss: 1.06e+02, acc: 0.35260115606936415\n",
+      "Epoch: 230, loss: 49.1, acc: 0.34335260115606936\n",
+      "Epoch: 240, loss: 98.4, acc: 0.3398843930635838\n",
+      "Epoch: 250, loss: 75.3, acc: 0.35260115606936415\n",
+      "Epoch: 260, loss: 50.8, acc: 0.3468208092485549\n",
+      "Epoch: 270, loss: 70.7, acc: 0.3514450867052023\n",
+      "Epoch: 280, loss: 1.61e+02, acc: 0.34797687861271676\n",
+      "Epoch: 290, loss: 81.7, acc: 0.3583815028901734\n"
      ]
     }
    ],
    "source": [
-    "num_epochs = 31\n",
-    "loss_hist = []\n",
-    "test_loss_hist = []\n",
-    "\n",
-    "# Outer training loop\n",
-    "for epoch in range(num_epochs):\n",
-    "    for data, targets in train_loader:\n",
-    "        data = data.to(device)\n",
-    "        targets = targets.to(device)\n",
-    "\n",
-    "    # forward pass\n",
-    "        model.train()\n",
-    "        preds = model(data).squeeze(dim=1)\n",
-    "\n",
-    "        loss = loss_fun(preds, targets)\n",
-    "\n",
-    "        # Gradient calculation + weight update\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()  # reset in get_accuracy\n",
+    "    for data_inputs, data_labels in data_loader:\n",
+    "        data_inputs = data_inputs.to(device)\n",
+    "        data_labels = data_labels.to(device)\n",
+    "        preds = model(data_inputs).squeeze(dim=1)\n",
+    "        loss = loss_fun(preds, data_labels)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "\n",
-    "        # Store loss history for future plotting\n",
-    "        #loss_hist.append(loss.item())\n",
-    "\n",
-    "    if epoch % 2 == 0:\n",
-    "        print(f\"Epoch: {epoch}, loss: {loss.item():.3}, acc: {get_accuracy(model, valid_loader, 0.2)}\")"
+    "    if epoch % 10 == 0:\n",
+    "        print(f\"Epoch: {epoch}, loss: {loss.item():.3}, acc: {get_accuracy(model, valid_data_loader, 0.2)}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -334,13 +312,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.38439306358381503"
+      "text/plain": "0.37745664739884394"
      },
-     "execution_count": 553,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +326,7 @@
    "source": [
     "percent = 0.2\n",
     "model.eval()\n",
-    "get_accuracy(model, test_loader, percent)"
+    "get_accuracy(model, test_data_loader, percent)"
    ],
    "metadata": {
     "collapsed": false,
@@ -359,19 +337,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([21.5200,  6.6400, 47.7700,  9.8000, 16.3400,  8.0200, 22.2200, 16.0000,\n        26.5700, 14.7100, 14.2600, 46.8500, 12.0400, 13.7400, 10.8100,  7.8400,\n        10.3400, 18.1300, 25.9300, 19.9300, 50.9400, 12.8100, 32.3200, 25.5500,\n        43.8000,  7.4500, 21.7900, 30.9200, 18.9300, 34.4500, 70.2600, 29.7400],\n       device='cuda:0')"
+      "text/plain": "tensor([40.0500,  9.5800, 22.6400, 22.3900, 23.3000, 23.6900,  7.2200, 41.8800,\n        19.8900, 24.8700, 26.8000, 40.5800,  8.7200,  6.8800, 22.7300,  8.4400,\n         3.5300, 10.3800,  9.7800, 19.7100, 83.8100, 10.5500, 15.8000, 31.9000,\n        38.6200, 13.6400, 38.6200, 18.3900, 38.8800,  4.8600, 32.4600, 19.3700],\n       device='cuda:0')"
      },
-     "execution_count": 554,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "targets"
+    "data_labels"
    ],
    "metadata": {
     "collapsed": false,
@@ -382,13 +360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([13.1635, 11.9892, 42.9729, 19.8671, 13.2309, 14.0652, 21.1927, 15.0116,\n        29.9898, 14.6159, 15.4557, 35.8256, 24.2308,  7.5534, 18.2664,  8.2213,\n        28.8393, 20.8042, 26.4876, 19.1598, 50.0451, 18.9561, 35.2028, 23.3641,\n        32.4731, 24.9270, 30.6722, 28.0178, 37.1176, 51.6018, 60.0072, 16.8827],\n       device='cuda:0', grad_fn=<SqueezeBackward1>)"
+      "text/plain": "tensor([ 23.2516,  13.0853,  24.1150,  16.7987,  14.6763,  15.1937,  10.3775,\n         37.3490,  16.2988,   8.0150,  14.8764,  25.1121,   7.1874,   8.6581,\n         28.2685,  17.6605,  15.7314,  13.8994,  17.3974,  13.7495, 106.7835,\n         15.5437,  18.8969,  11.7963,  29.6159,  19.3711,  27.8761,  13.9124,\n         17.4818,   7.0095,  22.2469,  15.4811], device='cuda:0',\n       grad_fn=<SqueezeBackward1>)"
      },
-     "execution_count": 555,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 28,
    "outputs": [],
    "source": [],
    "metadata": {
