Added processed data (6, 12, 24); renamed files

--- a/notebooks/simple-perceptron.ipynb
+++ b/notebooks/simple-perceptron.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "device(type='cuda')"
      },
-     "execution_count": 394,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x22a9b1912f0>"
+      "text/plain": "<torch._C.Generator at 0x16eb81422f0>"
      },
-     "execution_count": 395,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "class SimplePredictor(nn.Module):\n",
@@ -88,23 +88,15 @@
     "        self.linear1 = nn.Linear(num_inputs, num_hidden)\n",
     "        self.bn1 = nn.BatchNorm1d(num_hidden)\n",
     "        self.fn1 = nn.LeakyReLU()\n",
-    "        self.d1 = nn.Dropout(0.3)\n",
-    "        self.linear2 = nn.Linear(num_hidden, num_hidden)\n",
-    "        self.bn2 = nn.BatchNorm1d(num_hidden)\n",
-    "        self.fn2 = nn.LeakyReLU()\n",
-    "        self.d2 = nn.Dropout(0.3)\n",
-    "        self.linear3 = nn.Linear(num_hidden, num_outputs)\n",
+    "        #self.d1 = nn.Dropout(0.3)\n",
+    "        self.linear2 = nn.Linear(num_hidden, num_outputs)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.linear1(x)\n",
     "        x = self.bn1(x)\n",
     "        x = self.fn1(x)\n",
-    "        x = self.d1(x)\n",
+    "        #x = self.d1(x)\n",
     "        x = self.linear2(x)\n",
-    "        x = self.bn2(x)\n",
-    "        x = self.fn2(x)\n",
-    "        x = self.d2(x)\n",
-    "        x = self.linear3(x)\n",
     "        return x"
    ],
    "metadata": {
@@ -116,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "def get_accuracy(model, loader, pct_close):\n",
@@ -150,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "data06 = pd.read_csv(\"../data/processed/target06.csv\")"
@@ -164,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "all_data = data.TensorDataset(torch.from_numpy((data06.values[:,:-1] - data06.values[:,:-1].min(0)) / data06.values[:,:-1].ptp(0)).float(), torch.from_numpy(data06.values[:,-1]).float())  # with normalization\n",
@@ -179,10 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 22,
    "outputs": [],
    "source": [
-    "data_loader = data.DataLoader(train_dataset, batch_size=64, shuffle=True, drop_last=True)\n",
+    "data_loader = data.DataLoader(train_dataset, batch_size=32, shuffle=True, drop_last=True)\n",
     "test_data_loader = data.DataLoader(test_dataset, batch_size=256, shuffle=False, drop_last=False)\n",
     "valid_data_loader = data.DataLoader(valid_dataset, batch_size=256, shuffle=False, drop_last=False)"
    ],
@@ -204,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -214,12 +206,7 @@
       "  (linear1): Linear(in_features=8, out_features=500, bias=True)\n",
       "  (bn1): BatchNorm1d(500, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "  (fn1): LeakyReLU(negative_slope=0.01)\n",
-      "  (d1): Dropout(p=0.3, inplace=False)\n",
-      "  (linear2): Linear(in_features=500, out_features=500, bias=True)\n",
-      "  (bn2): BatchNorm1d(500, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (fn2): LeakyReLU(negative_slope=0.01)\n",
-      "  (d2): Dropout(p=0.3, inplace=False)\n",
-      "  (linear3): Linear(in_features=500, out_features=1, bias=True)\n",
+      "  (linear2): Linear(in_features=500, out_features=1, bias=True)\n",
       ")\n"
      ]
     }
@@ -238,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "loss_fun = nn.MSELoss()\n",
@@ -263,25 +250,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 25,
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [409]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      5\u001B[0m data_labels \u001B[38;5;241m=\u001B[39m data_labels\u001B[38;5;241m.\u001B[39mto(device)\n\u001B[0;32m      6\u001B[0m preds \u001B[38;5;241m=\u001B[39m model(data_inputs)\n\u001B[1;32m----> 7\u001B[0m preds \u001B[38;5;241m=\u001B[39m \u001B[43mpreds\u001B[49m\u001B[38;5;241m.\u001B[39msqueeze(dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m      8\u001B[0m loss \u001B[38;5;241m=\u001B[39m loss_fun(preds, data_labels)\n\u001B[0;32m      9\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mzero_grad()\n",
-      "Input \u001B[1;32mIn [409]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      5\u001B[0m data_labels \u001B[38;5;241m=\u001B[39m data_labels\u001B[38;5;241m.\u001B[39mto(device)\n\u001B[0;32m      6\u001B[0m preds \u001B[38;5;241m=\u001B[39m model(data_inputs)\n\u001B[1;32m----> 7\u001B[0m preds \u001B[38;5;241m=\u001B[39m \u001B[43mpreds\u001B[49m\u001B[38;5;241m.\u001B[39msqueeze(dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m      8\u001B[0m loss \u001B[38;5;241m=\u001B[39m loss_fun(preds, data_labels)\n\u001B[0;32m      9\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mzero_grad()\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_39_64.pyx:1180\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.SafeCallWrapper.__call__\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_39_64.pyx:621\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_39_64.pyx:1096\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_39_64.pyx:1054\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32mC:\\Program Files\\JetBrains\\DataSpell 2021.3.1\\plugins\\python-ce\\helpers-pro\\jupyter_debug\\pydev_jupyter_plugin.py:165\u001B[0m, in \u001B[0;36mstop\u001B[1;34m(plugin, pydb, frame, event, args, stop_info, arg, step_cmd)\u001B[0m\n\u001B[0;32m    163\u001B[0m     frame \u001B[38;5;241m=\u001B[39m suspend_jupyter(main_debugger, thread, frame, step_cmd)\n\u001B[0;32m    164\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m frame:\n\u001B[1;32m--> 165\u001B[0m         \u001B[43mmain_debugger\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdo_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    166\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[0;32m    167\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mFalse\u001B[39;00m\n",
-      "File \u001B[1;32mC:\\Program Files\\JetBrains\\DataSpell 2021.3.1\\plugins\\python-ce\\helpers\\pydev\\pydevd.py:1147\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[0;32m   1144\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[0;32m   1146\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[1;32m-> 1147\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mC:\\Program Files\\JetBrains\\DataSpell 2021.3.1\\plugins\\python-ce\\helpers\\pydev\\pydevd.py:1162\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[0;32m   1159\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[0;32m   1161\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[1;32m-> 1162\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1164\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[0;32m   1166\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0, loss: 5.23e+02, acc: 0.0\n",
+      "Epoch: 10, loss: 3.77e+02, acc: 0.028901734104046242\n",
+      "Epoch: 20, loss: 1.58e+02, acc: 0.09132947976878612\n",
+      "Epoch: 30, loss: 1.84e+02, acc: 0.19884393063583816\n",
+      "Epoch: 40, loss: 2.49e+02, acc: 0.2682080924855491\n",
+      "Epoch: 50, loss: 1.83e+02, acc: 0.2832369942196532\n",
+      "Epoch: 60, loss: 1.38e+02, acc: 0.28670520231213875\n",
+      "Epoch: 70, loss: 47.2, acc: 0.30057803468208094\n",
+      "Epoch: 80, loss: 50.5, acc: 0.3063583815028902\n",
+      "Epoch: 90, loss: 1.69e+02, acc: 0.31445086705202313\n",
+      "Epoch: 100, loss: 85.1, acc: 0.3202312138728324\n",
+      "Epoch: 110, loss: 1.38e+02, acc: 0.3179190751445087\n",
+      "Epoch: 120, loss: 1.53e+02, acc: 0.3179190751445087\n",
+      "Epoch: 130, loss: 1.74e+02, acc: 0.3225433526011561\n",
+      "Epoch: 140, loss: 45.3, acc: 0.32947976878612717\n",
+      "Epoch: 150, loss: 93.8, acc: 0.3421965317919075\n",
+      "Epoch: 160, loss: 98.5, acc: 0.3352601156069364\n",
+      "Epoch: 170, loss: 1.23e+02, acc: 0.33872832369942196\n",
+      "Epoch: 180, loss: 67.9, acc: 0.3421965317919075\n",
+      "Epoch: 190, loss: 58.1, acc: 0.3398843930635838\n",
+      "Epoch: 200, loss: 73.5, acc: 0.33872832369942196\n",
+      "Epoch: 210, loss: 94.0, acc: 0.3491329479768786\n",
+      "Epoch: 220, loss: 1.06e+02, acc: 0.35260115606936415\n",
+      "Epoch: 230, loss: 49.1, acc: 0.34335260115606936\n",
+      "Epoch: 240, loss: 98.4, acc: 0.3398843930635838\n",
+      "Epoch: 250, loss: 75.3, acc: 0.35260115606936415\n",
+      "Epoch: 260, loss: 50.8, acc: 0.3468208092485549\n",
+      "Epoch: 270, loss: 70.7, acc: 0.3514450867052023\n",
+      "Epoch: 280, loss: 1.61e+02, acc: 0.34797687861271676\n",
+      "Epoch: 290, loss: 81.7, acc: 0.3583815028901734\n"
      ]
     }
    ],
@@ -308,13 +312,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.41502890173410406"
+      "text/plain": "0.37745664739884394"
      },
-     "execution_count": 404,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,13 +337,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([  7.3100,  23.8300,  17.0900,  16.7200,  17.6200,   4.7100,  24.1400,\n         60.7700,  24.0200,  15.0500,   6.7800,  13.0900,  29.9500,  24.4800,\n          9.4600,   9.2800,  30.8900,  29.0800,  12.0500,   9.4300,   9.1100,\n         56.6800,  16.2800,  17.7600,  26.7300,  31.9300,  35.3100,  13.4300,\n         64.2500,  23.5900,  55.9300,  28.3900,   5.7700,  14.0900,  11.6300,\n         20.8500,  18.6600,  35.7100,  15.2500,  43.5600,  16.8000,  22.3600,\n         45.5500,  29.6800,  45.1900,   7.0200,   6.7100,   7.7900,  32.2300,\n         16.5200,  16.0700,  29.5300,  17.7600,  16.9000,  22.6300,  15.6400,\n         23.5400,  17.0200, 107.0300,  34.4500,  14.7100,  17.0200,  33.2800,\n          8.0300], device='cuda:0')"
+      "text/plain": "tensor([40.0500,  9.5800, 22.6400, 22.3900, 23.3000, 23.6900,  7.2200, 41.8800,\n        19.8900, 24.8700, 26.8000, 40.5800,  8.7200,  6.8800, 22.7300,  8.4400,\n         3.5300, 10.3800,  9.7800, 19.7100, 83.8100, 10.5500, 15.8000, 31.9000,\n        38.6200, 13.6400, 38.6200, 18.3900, 38.8800,  4.8600, 32.4600, 19.3700],\n       device='cuda:0')"
      },
-     "execution_count": 405,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,13 +360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([11.3600, 17.8969, 18.0133, 19.0191, 15.2848, 14.5450, 20.0980, 36.6738,\n         9.6147, 13.2605, 21.8079, 10.2801, 23.8805, 16.0375, 11.5407, 14.6885,\n        37.4205, 21.9232, 15.9340, 12.8984, 11.0779, 25.0718, 11.2050, 16.2207,\n        18.6796, 18.7991, 27.1358, 16.7870, 71.8349, 21.0481, 46.3770, 13.9490,\n        10.8034, 11.6345, 12.5956, 23.8274, 21.6561, 18.2344, 14.5048, 48.8154,\n        19.9559, 17.4760, 54.2418, 11.8113, 46.1624,  8.8858, 13.2907, 10.2789,\n        16.0052, 14.8832, 16.4630, 23.4398, 19.0115, 18.7728, 21.8953, 11.1997,\n        20.9393, 14.9818, 84.7230, 29.2692, 12.1623, 15.5643, 18.3759, 14.1447],\n       device='cuda:0', grad_fn=<SqueezeBackward1>)"
+      "text/plain": "tensor([ 23.2516,  13.0853,  24.1150,  16.7987,  14.6763,  15.1937,  10.3775,\n         37.3490,  16.2988,   8.0150,  14.8764,  25.1121,   7.1874,   8.6581,\n         28.2685,  17.6605,  15.7314,  13.8994,  17.3974,  13.7495, 106.7835,\n         15.5437,  18.8969,  11.7963,  29.6159,  19.3711,  27.8761,  13.9124,\n         17.4818,   7.0095,  22.2469,  15.4811], device='cuda:0',\n       grad_fn=<SqueezeBackward1>)"
      },
-     "execution_count": 406,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 28,
    "outputs": [],
    "source": [],
    "metadata": {
